# QRcode_creator_for_win

./: .gitignore  ProductQRCodeMaker.spec  README.md  pyproject.toml  requirements-build.txt  requirements-dev.txt
scripts/: build_exe.cmd  build_exe.ps1  setup_venv.cmd
src/qrcode_product_maker/: __init__.py  __main__.py  app.py  date_picker.py  models.py  printing.py  qr_service.py  validators.py
tests/: test_date_picker.py  test_models.py
