[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "qrcode-product-maker"
version = "1.0.0"
description = "Desktop app for creating printable UTF-8 product QR codes."
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "qrcode[pil]==7.4.2",
    "Pillow==9.5.0",
]

[project.scripts]
product-qr-code-maker = "qrcode_product_maker.__main__:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py38"
